# Analyzer-Cobol-Agent

./: AnalyzerBot.py  README.md  pyproject.toml
cobol/: ACCOUNTING_SYSTEM.COB  BUYROUTINE.COB
