[project]
name = "langchain-introduction-dmi"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Ferro"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "marimo (>=0.13.11,<0.14.0)",
    "langgraph (==0.*)",
    "langgraph-swarm (>=0.0.11,<0.0.12)",
    "langgraph-supervisor (>=0.0.23,<0.0.24)",
    "langchain-core (==0.*)",
    # "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-mistralai (==0.*)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "mcp (>=1.23.1,<2.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "langchain-huggingface (==0.2.0)",
    "sentence-transformers (==4.1.0)",
    "langchain-mcp-adapters (==0.1.1)",
    "langchain-mcp-tools (==0.2.4)",
    "ipython (>=9.8.0,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.marimo.runtime]
dotenv = [".env"]

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
